k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  labels:
    app: authentication
spec:
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
