k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: auth.REPLACE_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication
                port:
                  number: 80
